# serializer version: 1
# name: test_form_and_fields
  dict({
    'help_text': None,
    'label': 'Date field',
    'name': 'date_field',
    'widget': dict({
      'attrs': dict({
        'id': 'id_date_field',
        'required': True,
      }),
      'is_hidden': False,
      'name': 'date_field',
      'required': True,
      'subwidgets': list([
        dict({
          'attrs': dict({
            'id': 'id_date_field_month',
            'required': True,
          }),
          'is_hidden': False,
          'name': 'date_field_month',
          'optgroups': list([
            list([
              None,
              list([
                dict({
                  'label': 'January',
                  'name': 'date_field_month',
                  'selected': True,
                  'value': 1,
                }),
              ]),
              0,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'February',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 2,
                }),
              ]),
              1,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'March',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 3,
                }),
              ]),
              2,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'April',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 4,
                }),
              ]),
              3,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'May',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 5,
                }),
              ]),
              4,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'June',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 6,
                }),
              ]),
              5,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'July',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 7,
                }),
              ]),
              6,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'August',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 8,
                }),
              ]),
              7,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'September',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 9,
                }),
              ]),
              8,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'October',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 10,
                }),
              ]),
              9,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'November',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 11,
                }),
              ]),
              10,
            ]),
            list([
              None,
              list([
                dict({
                  'label': 'December',
                  'name': 'date_field_month',
                  'selected': False,
                  'value': 12,
                }),
              ]),
              11,
            ]),
          ]),
          'required': False,
          'tag': 'django.forms.widgets.Select',
          'template_name': 'django/forms/widgets/select.html',
          'value': '1',
        }),
        dict({
          'attrs': dict({
            'id': 'id_date_field_day',
            'required': True,
          }),
          'is_hidden': False,
          'name': 'date_field_day',
          'optgroups': list([
            list([
              None,
              list([
                dict({
                  'label': '1',
                  'name': 'date_field_day',
                  'selected': True,
                  'value': 1,
                }),
              ]),
              0,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '2',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 2,
                }),
              ]),
              1,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '3',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 3,
                }),
              ]),
              2,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '4',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 4,
                }),
              ]),
              3,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '5',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 5,
                }),
              ]),
              4,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '6',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 6,
                }),
              ]),
              5,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '7',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 7,
                }),
              ]),
              6,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '8',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 8,
                }),
              ]),
              7,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '9',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 9,
                }),
              ]),
              8,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '10',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 10,
                }),
              ]),
              9,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '11',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 11,
                }),
              ]),
              10,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '12',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 12,
                }),
              ]),
              11,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '13',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 13,
                }),
              ]),
              12,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '14',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 14,
                }),
              ]),
              13,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '15',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 15,
                }),
              ]),
              14,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '16',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 16,
                }),
              ]),
              15,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '17',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 17,
                }),
              ]),
              16,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '18',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 18,
                }),
              ]),
              17,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '19',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 19,
                }),
              ]),
              18,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '20',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 20,
                }),
              ]),
              19,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '21',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 21,
                }),
              ]),
              20,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '22',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 22,
                }),
              ]),
              21,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '23',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 23,
                }),
              ]),
              22,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '24',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 24,
                }),
              ]),
              23,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '25',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 25,
                }),
              ]),
              24,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '26',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 26,
                }),
              ]),
              25,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '27',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 27,
                }),
              ]),
              26,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '28',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 28,
                }),
              ]),
              27,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '29',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 29,
                }),
              ]),
              28,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '30',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 30,
                }),
              ]),
              29,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '31',
                  'name': 'date_field_day',
                  'selected': False,
                  'value': 31,
                }),
              ]),
              30,
            ]),
          ]),
          'required': False,
          'tag': 'django.forms.widgets.Select',
          'template_name': 'django/forms/widgets/select.html',
          'value': '1',
        }),
        dict({
          'attrs': dict({
            'id': 'id_date_field_year',
            'required': True,
          }),
          'is_hidden': False,
          'name': 'date_field_year',
          'optgroups': list([
            list([
              None,
              list([
                dict({
                  'label': '2000',
                  'name': 'date_field_year',
                  'selected': False,
                  'value': 2000,
                }),
              ]),
              0,
            ]),
            list([
              None,
              list([
                dict({
                  'label': '2001',
                  'name': 'date_field_year',
                  'selected': False,
                  'value': 2001,
                }),
              ]),
              1,
            ]),
          ]),
          'required': False,
          'tag': 'django.forms.widgets.Select',
          'template_name': 'django/forms/widgets/select.html',
          'value': '2015',
        }),
      ]),
      'tag': 'django.forms.widgets.SelectDateWidget',
      'template_name': 'django/forms/widgets/select_date.html',
      'value': dict({
        'day': 1,
        'month': 1,
        'year': 2015,
      }),
    }),
  })
# ---
# name: test_form_and_fields.1
  dict({
    'help_text': None,
    'label': 'Date time field',
    'name': 'date_time_field',
    'widget': dict({
      'attrs': dict({
        'id': 'id_date_time_field',
        'required': True,
      }),
      'is_hidden': False,
      'name': 'date_time_field',
      'required': True,
      'subwidgets': list([
        dict({
          'attrs': dict({
            'id': 'id_date_time_field_0',
            'required': True,
          }),
          'is_hidden': False,
          'name': 'date_time_field_0',
          'required': False,
          'tag': 'django.forms.widgets.DateInput',
          'template_name': 'django/forms/widgets/date.html',
          'type': 'text',
          'value': None,
        }),
        dict({
          'attrs': dict({
            'id': 'id_date_time_field_1',
            'required': True,
          }),
          'is_hidden': False,
          'name': 'date_time_field_1',
          'required': False,
          'tag': 'django.forms.widgets.TimeInput',
          'template_name': 'django/forms/widgets/time.html',
          'type': 'text',
          'value': None,
        }),
      ]),
      'tag': 'django.forms.widgets.SplitDateTimeWidget',
      'template_name': 'django/forms/widgets/splitdatetime.html',
      'value': None,
    }),
  })
# ---
# name: test_form_and_fields.2
  dict({
    'help_text': 'Not blank',
    'label': 'Boolean field',
    'name': 'boolean_field',
    'widget': dict({
      'attrs': dict({
        'checked': True,
        'id': 'id_boolean_field',
        'required': True,
      }),
      'is_hidden': False,
      'name': 'boolean_field',
      'required': True,
      'tag': 'django.forms.widgets.CheckboxInput',
      'template_name': 'django/forms/widgets/checkbox.html',
      'type': 'checkbox',
      'value': True,
    }),
  })
# ---
# name: test_nested_null_foreign_keys
  dict({
    'test_nested_null_foreign_keys.<locals>.Child_cf6d15b34c': dict({
      'additionalProperties': False,
      'properties': dict({
        'parent': dict({
          'anyOf': list([
            dict({
              'additionalProperties': False,
              'properties': dict({
                'grandparent': dict({
                  'anyOf': list([
                    dict({
                      'additionalProperties': False,
                      'properties': dict({
                        'description': dict({
                          'type': 'string',
                        }),
                        'id': dict({
                          'type': 'number',
                        }),
                        'name': dict({
                          'type': 'string',
                        }),
                      }),
                      'required': list([
                        'id',
                        'name',
                        'description',
                      ]),
                      'type': 'object',
                    }),
                    dict({
                      'type': 'null',
                    }),
                  ]),
                }),
              }),
              'required': list([
                'grandparent',
              ]),
              'type': 'object',
            }),
            dict({
              'type': 'null',
            }),
          ]),
        }),
      }),
      'required': list([
        'parent',
      ]),
      'title': 'test_nested_null_foreign_keys.<locals>.Child_cf6d15b34c',
      'type': 'object',
    }),
  })
# ---
# name: test_null_one_to_one_field
  dict({
    'test_null_one_to_one_field.<locals>.Brother_56906733d0': dict({
      'additionalProperties': False,
      'properties': dict({
        'sister': dict({
          'anyOf': list([
            dict({
              'additionalProperties': False,
              'properties': dict({
                'id': dict({
                  'type': 'number',
                }),
              }),
              'required': list([
                'id',
              ]),
              'type': 'object',
            }),
            dict({
              'type': 'null',
            }),
          ]),
        }),
      }),
      'required': list([
        'sister',
      ]),
      'title': 'test_null_one_to_one_field.<locals>.Brother_56906733d0',
      'type': 'object',
    }),
  })
# ---
# name: test_override_pick_types
  dict({
    'additionalProperties': False,
    'properties': dict({
      'forced_non_nullable': dict({
        'type': 'number',
      }),
      'forced_none': dict({
        'type': 'null',
      }),
      'forced_nullable': dict({
        '_reactivated_union': dict({
          'builtins.int': dict({
            'type': 'number',
          }),
        }),
        'anyOf': list([
          dict({
            'type': 'number',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'serializer': 'reactivated.serialization.UnionType',
      }),
    }),
    'required': list([
      'forced_nullable',
      'forced_non_nullable',
      'forced_none',
    ]),
    'title': 'test_override_pick_types.<locals>.TestModel_fdae93dc88',
    'type': 'object',
  })
# ---
# name: test_serialize_lazy_object
  Thing(
    definitions=dict({
    }),
    schema=dict({
      'type': 'string',
    }),
  )
# ---
# name: test_simple_union
  Thing(
    definitions=dict({
    }),
    schema=dict({
      '_reactivated_union': dict({
        'builtins.bool': dict({
          'type': 'boolean',
        }),
        'builtins.int': dict({
          'type': 'number',
        }),
        'builtins.list': dict({
          'items': dict({
            'type': 'string',
          }),
          'type': 'array',
        }),
        'builtins.str': dict({
          'type': 'string',
        }),
        'builtins.tuple': dict({
          'items': list([
            dict({
              'type': 'number',
            }),
            dict({
              'type': 'string',
            }),
          ]),
          'maxItems': 2,
          'minItems': 2,
          'type': 'array',
        }),
        'datetime.date': dict({
          'type': 'string',
        }),
      }),
      'anyOf': list([
        dict({
          'type': 'string',
        }),
        dict({
          'items': dict({
            'type': 'string',
          }),
          'type': 'array',
        }),
        dict({
          'items': list([
            dict({
              'type': 'number',
            }),
            dict({
              'type': 'string',
            }),
          ]),
          'maxItems': 2,
          'minItems': 2,
          'type': 'array',
        }),
        dict({
          'type': 'number',
        }),
        dict({
          'type': 'string',
        }),
        dict({
          'type': 'boolean',
        }),
        dict({
          'type': 'null',
        }),
      ]),
      'serializer': 'reactivated.serialization.UnionType',
    }),
  )
# ---
# name: test_union_with_literal
  Thing(
    definitions=dict({
    }),
    schema=dict({
      '_reactivated_union': dict({
        'literal-0-0.builtins.str': dict({
          'enum': list([
            'one',
          ]),
        }),
        'literal-0-1.builtins.str': dict({
          'enum': list([
            'three',
          ]),
        }),
        'literal-0-2.builtins.int': dict({
          'enum': list([
            3,
          ]),
        }),
        'literal-0-3.builtins.bool': dict({
          'enum': list([
            False,
          ]),
        }),
      }),
      'anyOf': list([
        dict({
          'enum': list([
            'one',
          ]),
        }),
        dict({
          'enum': list([
            'three',
          ]),
        }),
        dict({
          'enum': list([
            3,
          ]),
        }),
        dict({
          'enum': list([
            False,
          ]),
        }),
        dict({
          'type': 'null',
        }),
      ]),
      'serializer': 'reactivated.serialization.UnionType',
    }),
  )
# ---
# name: test_uuid_field
  dict({
    'serializer': 'reactivated.serialization.UUIDFieldType',
    'tsType': 'UUID',
  })
# ---
# name: test_uuid_field.1
  dict({
  })
# ---
# name: test_uuid_field.2
  dict({
    'anyOf': list([
      dict({
        'serializer': 'reactivated.serialization.UUIDFieldType',
        'tsType': 'UUID',
      }),
      dict({
        'type': 'null',
      }),
    ]),
  })
# ---
# name: test_uuid_field.3
  dict({
  })
# ---
